# gsync

./: .git-sync-server.toml  .git-sync.toml  .gitignore  Cargo.toml  README.md  install.sh  readme.md  test.sh  testdaemon.sh
doc/: help.doc
doc/dev-note/: tools.md
scripts/: alias.sh  color.sh  init-server.sh  install_git.sh  ui.sh
src/: main.rs  repos.rs  server.rs  sync.rs  utils.rs
test/new_sync/: readme.md
