[package]
name = "gsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = '0.4.2'
argh = '0.1.4'
serde = {version = '1.0',features = ['derive']}
chrono = '0.4.0'
psutil = '3.2.2'
dirs = '1.0.4'

